--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -10,6 +10,11 @@ en:
       not_saved:
         one: "1 error prohibited this %{resource} from being saved:"
         other: "%{count} errors prohibited this %{resource} from being saved:"
+        
+  activerecord:
+    attributes:
+      user:  
+        login: "Phone Number or email"
 
   devise:
     failure:
